deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: franmonteiro
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app-ticketing
        image: registry.deti:5000/app
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

#Create Service
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: franmonteiro
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app

#Create Route
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-k3s
  namespace: franmonteiro
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: app.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port: 
              number: 80
